melhorias gerais no projeto

--- a/src/shared/translation/en_US.json
+++ b/src/shared/translation/en_US.json
@@ -20,6 +20,7 @@
   "DESCRIPTION": "Description",
   "SIMILAR": "Similar",
   "CAST": "Cast",
+  "CREW": "Crew",
   "MOVIES": "Movies",
   "TV_SHOW": "TV Shows",
   "PEOPLE": "People",
@@ -27,6 +28,7 @@
   "MOVIES_TRENDING_WEEK": "Movies trending this week",
   "TV_SHOW_TRENDING_WEEK": "TV Shows trending this week",
   "AIRING_TODAY": "Airing today",
+  "MOVIE": "Movie",
   "ON_AIR": "On air",
   "UPCOMING_MOVIE": "Upcoming movies",
   "MOVIES_DESCRIPTION": "Horror, animation, comedy, drama, and documentary movies, everything here!",
