--- a/src/shared/translation/pt_BR.json
+++ b/src/shared/translation/pt_BR.json
@@ -20,7 +20,9 @@
   "DESCRIPTION": "Descrição",
   "SIMILAR": "Similares",
   "CAST": "Elenco",
+  "CREW": "Equipe",
   "MOVIES": "Filmes",
+  "MOVIE": "Filme",
   "TV_SHOW": "Séries",
   "PEOPLE": "Pessoas",
   "TRENDING_WEEK": "Em alta na semana",
