criando primeira versao das temporadas

--- a/src/shared/translation/en_US.json
+++ b/src/shared/translation/en_US.json
@@ -21,6 +21,7 @@
   "SIMILAR": "Similar",
   "CAST": "Cast",
   "CREW": "Crew",
+  "SEASONS": "Seasons",
   "MOVIES": "Movies",
   "TV_SHOW": "TV Shows",
   "PEOPLE": "People",
