--- a/src/shared/translation/pt_BR.json
+++ b/src/shared/translation/pt_BR.json
@@ -23,6 +23,7 @@
   "CREW": "Equipe",
   "MOVIES": "Filmes",
   "MOVIE": "Filme",
+  "SEASONS": "Temporadas",
   "TV_SHOW": "Séries",
   "PEOPLE": "Pessoas",
   "TRENDING_WEEK": "Em alta na semana",
